@@ -435,6 +435,23 @@ class ReflectionTest(PersistTest):
         finally:
             table.drop()
 
+    @testbase.supported('mssql')
+    def testidentity(self):
+        meta = MetaData(testbase.db)
+        table = Table(
+            'identity_test', meta, 
+            Column('col1', Integer, Sequence('fred', 2, 3), primary_key=True)
+        )
+        table.create()
+        
+        meta2 = MetaData(testbase.db)
+        try:
+            table2 = Table('identity_test', meta2, autoload=True)
+            print table2.c['col1'].sequence
+        finally:
+            table.drop()
+
+
 class CreateDropTest(PersistTest):
     def setUpAll(self):
         global metadata, users
