@@ -96,6 +96,7 @@
 
 - mssql
     - fix port option handling for pyodbc [ticket:634]
+    - now able to reflect start and increment values for identity columns
 
 - extensions
     - added selectone_by() to assignmapper
